--- a/scss/feels/base/_mixins.scss
+++ b/scss/feels/base/_mixins.scss
@@ -113,3 +113,15 @@
     opacity: 0.65;
   }
 }
+
+@mixin word-wrap() {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
